--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -2,3 +2,8 @@
 @import "../base/mixins";
 @import "../base/variables";
 @import "../base/media-queries";
+
+.layout {
+  width: calc(100% - 10.0052vw);
+  @include margin-auto;
+}
