--- a/src/process/process.scss
+++ b/src/process/process.scss
@@ -2,3 +2,39 @@
 @import "../base/mixins";
 @import "../base/variables";
 @import "../base/media-queries";
+
+.process {
+
+  &__block {
+  }
+
+  &__icon {
+  }
+
+  &__title-block {
+  }
+
+  &__title {
+  }
+
+  &__subtitle {
+  }
+
+  &__items {
+  }
+
+  &__item {
+  }
+
+  &__item-number {
+  }
+
+  &__item-desc {
+  }
+
+  &__item-desc-title {
+  }
+
+  &__item-desc-text {
+  }
+}
