--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -2,3 +2,145 @@
 @import "../base/mixins";
 @import "../base/variables";
 @import "../base/media-queries";
+
+.footer {
+  background: var(--black-color);
+  color: var(--white-color);
+  padding-top: 2vw;
+  padding-bottom: 7vw;
+
+  &__text-row {
+    margin-bottom: 7.9vw;
+  }
+
+  &__text-row-line {
+    @include flex-row;
+    opacity: 0.1;
+    margin-left: -5.4vw;
+  }
+
+  &__text-row-item {
+    @include manrope;
+    font-weight: 300;
+    font-size: 3.4392vw;
+    line-height: 100%;
+    letter-spacing: -0.033em;
+    margin-right: 3.8vw;
+    position: relative;
+
+    &:after {
+      @include pseudo-absolute;
+      width: .3vw;
+      height: .3vw;
+      border-radius: 50%;
+      background: var(--white-color);
+      top: 2vw;
+      right: -2.2vw;
+    }
+  }
+
+  &__block {
+  }
+
+  &__top {
+    @include flex-row;
+    justify-content: space-between;
+    margin-bottom: 9.3vw;
+  }
+
+  &__logo {
+  }
+
+  &__desc {
+    @include manrope;
+    font-weight: 700;
+    font-size: 1.7196vw;
+    line-height: 100%;
+    letter-spacing: -0.033em;
+  }
+
+  &__contacts {
+    @include manrope;
+    line-height: 100%;
+  }
+
+  &__contacts-phone {
+    font-weight: 200;
+    font-size: 4.1688vw;
+    letter-spacing: -0.033em;
+    color: var(--white-color);
+    display: block;
+    line-height: 100%;
+    margin-bottom: 2.5vw;
+  }
+
+  &__contacts-mail {
+    font-weight: 700;
+    font-size: 1.7196vw;
+    line-height: 100%;
+    letter-spacing: -0.033em;
+    color: var(--white-color);
+    display: block;
+    margin-bottom: .7vw;
+  }
+
+  &__contacts-copyright {
+    font-size: 1.1464vw;
+    letter-spacing: -0.033em;
+    line-height: 100%;
+    opacity: 0.2;
+  }
+
+  &__bottom {
+    @include flex-row;
+    justify-content: space-between;
+  }
+
+  &__link {
+    color: var(--main-color);
+    position: relative;
+    width: fit-content;
+    @include manrope;
+    font-weight: 700;
+    font-size: 6.9306vw;
+    line-height: 100%;
+    letter-spacing: -0.033em;
+
+    &:after {
+      @include pseudo-absolute();
+      width: 100%;
+      height: 0.65vw;
+      background: var(--main-color);
+      left: 0;
+      top: calc(100% + 1vw);
+    }
+  }
+
+  &__social {
+    @include flex-row;
+    margin-top: 0.6vw;
+  }
+
+  &__social-item {
+    width: 5.75vw;
+    height: 5.75vw;
+    position: relative;
+    @include flex-row-center;
+
+    &:after {
+      @include pseudo-absolute;
+      @include absolute-center;
+      border: .1vw solid #252728;
+      border-radius: 50%;
+      width: 117%;
+      height: 117%;
+    }
+  }
+
+  &__social-item-img {
+    width: 1.2vw;
+    height: 1.2vw;
+    object-fit: contain;
+    object-position: center;
+  }
+}
