--- a/src/intro/intro.scss
+++ b/src/intro/intro.scss
@@ -149,7 +149,8 @@
 
     &--2 {
       margin-top: -9vw;
-      margin-left: 43.7vw
+      margin-left: 43.7vw;
+      margin-right: -15vw;
     }
   }
 
