full markup (ex.swiper)

--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -9,47 +9,78 @@
   top: 0;
   width: 100%;
   transition: all .3s ease-out;
+  will-change: transform;
+  z-index: 100;
+  transform: translateY(-8500px);
 
   $ready-title: '.animation__block--ready-title';
   $fade: '.animation__block--fade';
 
+  &__text-x-scroll {
+
+    &--business {
+      transform: translateX(50%);
+    }
+  }
+
+  &__slide {
+    //z-index: -1;
+    //position: fixed;
+    //left: 0;
+    //top: 0;
+    //width: 100%;
+
+    //transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
+    //opacity: 0;
+    //visibility: hidden;
+    //
+    //&.portfolio {
+    //  opacity: 0;
+    //  transform: translateY(0);
+    //}
+
+  }
+
   &__change-background {
-    z-index: 1;
-    position: relative;
-    transition: all .6s ease-out;
-  }
-
-  &__title-wrapper {
-    overflow: hidden;
-  }
-
-  &__title {
-    transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
     transform: translateY(100%);
-    transform-origin: top right;
-    transition-delay: .2s;
-
-    #{$ready-title} & {
-      transform: none;
-      transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
-      opacity: 1;
-    }
+    transition: all .5s ease-out;
+    will-change: transform;
+    background: var(--main-color);
   }
 
-  &__text-wrapper {
-    overflow: hidden;
-  }
-
-  &__text {
-    transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
-    transform: translateY(100%);
-    transform-origin: top right;
-    transition-delay: .5s;
-
-    #{$ready-title} & {
-      transform: none;
-      transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
-      opacity: 1;
-    }
-  }
+  //&__title-wrapper {
+  //  overflow: hidden;
+  //}
+  //
+  //&__title {
+  //  will-change: transform;
+  //  transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
+  //  transform: translateY(100%);
+  //  transform-origin: top right;
+  //  transition-delay: .2s;
+  //
+  //  #{$ready-title} & {
+  //    transform: none;
+  //    transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
+  //    opacity: 1;
+  //  }
+  //}
+  //
+  //&__text-wrapper {
+  //  overflow: hidden;
+  //}
+  //
+  //&__text {
+  //  will-change: transform;
+  //  transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
+  //  transform: translateY(100%);
+  //  transform-origin: top right;
+  //  transition-delay: .5s;
+  //
+  //  #{$ready-title} & {
+  //    transform: none;
+  //    transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
+  //    opacity: 1;
+  //  }
+  //}
 }
