--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -4,83 +4,97 @@
 @import "../base/media-queries";
 
 .animation {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  transition: all .3s ease-out;
-  will-change: transform;
-  z-index: 100;
-  transform: translateY(-8500px);
+
+
+  &__screen {
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    transition: transform;
+    contain: content;
+    will-change: transform;
+    transition-timing-function: cubic-bezier(.25, .74, .22, .99);
+    transform: matrix(1.00, 0.00, 0.00, 1.00, 0, 0);
+  }
+
 
   $ready-title: '.animation__block--ready-title';
-  $fade: '.animation__block--fade';
-
-  &__text-x-scroll {
-
-    &--business {
-      transform: translateX(50%);
-    }
-  }
-
-  &__slide {
-    //z-index: -1;
-    //position: fixed;
-    //left: 0;
-    //top: 0;
-    //width: 100%;
-
-    //transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
-    //opacity: 0;
-    //visibility: hidden;
-    //
-    //&.portfolio {
-    //  opacity: 0;
-    //  transform: translateY(0);
-    //}
-
-  }
 
   &__change-background {
-    transform: translateY(100%);
-    transition: all .5s ease-out;
+    //transition: transform 300ms ease-out;
     will-change: transform;
     background: var(--main-color);
   }
 
-  //&__title-wrapper {
-  //  overflow: hidden;
-  //}
-  //
-  //&__title {
-  //  will-change: transform;
-  //  transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
-  //  transform: translateY(100%);
-  //  transform-origin: top right;
-  //  transition-delay: .2s;
-  //
-  //  #{$ready-title} & {
-  //    transform: none;
-  //    transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
-  //    opacity: 1;
-  //  }
-  //}
-  //
-  //&__text-wrapper {
-  //  overflow: hidden;
-  //}
-  //
-  //&__text {
-  //  will-change: transform;
-  //  transition: all 1.6s cubic-bezier(.25, .74, .22, .99);
-  //  transform: translateY(100%);
-  //  transform-origin: top right;
-  //  transition-delay: .5s;
-  //
-  //  #{$ready-title} & {
-  //    transform: none;
-  //    transition: transform 1.6s cubic-bezier(.25, .74, .22, .99), opacity 0ms;
-  //    opacity: 1;
-  //  }
-  //}
+  &__text-x-scroll {
+    transition: transform;
+
+    transition-duration: 300ms;
+    contain: content;
+    will-change: transform;
+    transition-timing-function: cubic-bezier(.25, .74, .22, .99);
+    line-height: normal;
+
+    &--business {
+      transform: translateX(100vw);
+    }
+
+    &--process {
+      transform: translateX(70vw);
+    }
+
+    &--have-a-task {
+      transform: translateX(50vw);
+    }
+  }
+
+  &__title-wrapper {
+    overflow: hidden;
+
+  }
+
+  &__title {
+    will-change: transform;
+    transition: transform .8s cubic-bezier(.25, .74, .22, .99);
+    transition: transform 800ms linear;
+    //transform: translate3d(0, 100%, 0);
+    transform-origin: top right;
+    //transition-delay: .1s;
+    contain: content;
+
+    &--active {
+      transform: none;
+    }
+  }
+
+  &__text-wrapper {
+    overflow: hidden;
+  }
+
+  &__text {
+    will-change: transform;
+    //transition: transform 1.3s cubic-bezier(.25, .74, .22, .99);
+    transition: transform 1300ms linear;
+    //transform: translate3d(0, 100%, 0);
+    transform-origin: top right;
+    transition-delay: .3s;
+    contain: content;
+
+    #{$ready-title} &--active {
+      transform: none;
+    }
+  }
+
+  &__opacity {
+    opacity: 0;
+    transition: all 1000ms ease-out;
+
+    #{$ready-title} & {
+      opacity: 1;
+    }
+
+  }
+
 }
