--- a/src/base/main.scss
+++ b/src/base/main.scss
@@ -68,15 +68,25 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   background: var(--black-color);
+  scroll-behavior: auto;
 }
 
 body {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: auto;
+
   text-shadow: none;
   margin: 0;
   @include kudryashev;
+  max-height: 100vh;
+  overflow: hidden;
+
+  &.init {
+    max-height: none;
+  }
+
 }
 
 a {
