--- a/src/intro/intro.scss
+++ b/src/intro/intro.scss
@@ -6,7 +6,7 @@
 .intro {
   background: var(--black-color);
   color: var(--white-color);
-  padding-bottom: 10.4vw;
+  padding-bottom: 30vw;
 
   &__block {
   }
@@ -121,6 +121,12 @@
     top: 8.2vw;
   }
 
+  &__about-button-item-form {
+    position: absolute;
+    fill: var(--main-color);
+    @include absolute-fill;
+  }
+
   &__about-button-icon {
     width: 1.5112vw;
     height: 1.5112vw;
@@ -157,7 +163,6 @@
   &__about-desc {
     @include manrope;
     font-size: 3.4392vw;
-    line-height: 100%;
     letter-spacing: -0.033em;
     @include flex-row;
     padding-left: 26vw;
@@ -172,6 +177,10 @@
       font-weight: 700;
       margin-left: 9vw;
     }
+  }
+
+  &__about-desc-item-line {
+    margin-top: -1.1vw;
   }
 
   &__about-link {
