--- a/src/process/process.scss
+++ b/src/process/process.scss
@@ -26,12 +26,16 @@
     margin-bottom: 11.3vw;
   }
 
+  &__title-wrapper {
+    margin-left: -36.25vw;
+    margin-bottom: 2vw;
+  }
+
   &__title {
     font-size: 20.2188vw;
-    margin-bottom: 2vw;
     letter-spacing: -0.05em;
     white-space: nowrap;
-    margin-left: -36.25vw;
+
   }
 
   &__subtitle {
