--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -5,6 +5,51 @@
 
 .animation {
 
+  &__scroll {
+    position: fixed;
+    width: 30px;
+    z-index: 200;
+    right: 0;
+    top: 0;
+    height: 100vh;
+
+    &:hover {
+      background: rgba(0, 0, 0, .1);
+    }
+  }
+
+  $scroll-hover: '.animation__scroll:hover';
+
+  &__scroll-handler-wrapper {
+    width: 100%;
+    height: 4vw;
+    transition: transform;
+    contain: content;
+    will-change: transform;
+    position: relative;
+  }
+
+  &__scroll-handler {
+    position: absolute;
+    right: 5px;
+    width: 20px;
+    height: calc(100% - 10px);
+    top: 5px;
+    transition: all;
+    contain: content;
+    will-change: transform;
+    transition-timing-function: cubic-bezier(.25, .74, .22, .99);
+    transition-duration: 200ms;
+    border: 1px solid var(--main-color);
+    border-radius: 10px;
+    opacity: .2;
+
+    #{$scroll-hover} & {
+      opacity: 1;
+      border: 2px solid var(--main-color);
+      background: var(--main-color);
+    }
+  }
 
   &__screen {
     position: fixed;
@@ -12,25 +57,24 @@
     z-index: 100;
     left: 0;
     top: 0;
-    transition: transform;
-    contain: content;
+    //contain: content;
     will-change: transform;
-    transition-timing-function: cubic-bezier(.25, .74, .22, .99);
+    transition: none;
     transform: matrix(1.00, 0.00, 0.00, 1.00, 0, 0);
   }
-
 
   $ready-title: '.animation__block--ready-title';
 
   &__change-background {
     //transition: transform 300ms ease-out;
+    transition: none !important;
     will-change: transform;
     background: var(--main-color);
   }
 
   &__text-x-scroll {
     transition: transform;
-
+    transition: none !important;
     transition-duration: 300ms;
     contain: content;
     will-change: transform;
@@ -57,12 +101,9 @@
 
   &__title {
     will-change: transform;
-    transition: transform .8s cubic-bezier(.25, .74, .22, .99);
-    transition: transform 800ms linear;
-    //transform: translate3d(0, 100%, 0);
+    transition: transform 1300ms cubic-bezier(.25, .74, .22, .99);
+    transform: translate3d(0, 100%, 0);
     transform-origin: top right;
-    //transition-delay: .1s;
-    contain: content;
 
     &--active {
       transform: none;
@@ -75,12 +116,10 @@
 
   &__text {
     will-change: transform;
-    //transition: transform 1.3s cubic-bezier(.25, .74, .22, .99);
-    transition: transform 1300ms linear;
-    //transform: translate3d(0, 100%, 0);
+    transition: transform 900ms cubic-bezier(.25, .74, .22, .99);
+    transform: translate3d(0, 100%, 0);
     transform-origin: top right;
-    transition-delay: .3s;
-    contain: content;
+    transition-delay: .1s;
 
     #{$ready-title} &--active {
       transform: none;
