--- a/src/logo-circle/logo-circle.scss
+++ b/src/logo-circle/logo-circle.scss
@@ -17,6 +17,16 @@
     position: absolute;
     @include absolute-fill;
     display: block;
+    animation: rotate 8s infinite linear;
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   }
 
   &__logo {
