--- a/src/intro/intro.scss
+++ b/src/intro/intro.scss
@@ -35,11 +35,35 @@
     letter-spacing: -0.033em;
   }
 
+  $name-show: '.intro__name--show';
+
   &__name {
     position: absolute;
     z-index: 1;
     top: 2vw;
     right: -8.55vw;
+    opacity: .2;
+    transition: all 300ms ease-out;
+
+    &--show {
+      opacity: 1;
+    }
+  }
+
+  &__name-mask {
+    position: absolute;
+    width: 138%;
+    height: 125%;
+    top: -9%;
+    left: 7%;
+    background: var(--black-color);
+    filter: blur(69px);
+    transition: all 300ms ease-out;
+    opacity: .5;
+
+    #{$name-show} & {
+      transform: translateX(100vw);
+    }
   }
 
   &__name-title {
@@ -145,6 +169,15 @@
     letter-spacing: -0.05em;
     margin-top: 1vw;
     line-height: 106%;
+    position: relative;
+  }
+
+  &__about-title-temp {
+    position: absolute;
+    @include absolute-fill;
+    z-index: 100;
+    top: -6vw;
+    left: -17vw;
   }
 
   &__about-title-line {
